Use Java 16 and disable preview features